crates/vespertide-query/src/snapshots/vespertide_query__sql__tests__build_migration_action@build_migration_action_add_column_with_backfill_sqlite.snap
---
source: crates/vespertide-query/src/sql.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
ALTER TABLE "users" ADD COLUMN "age" integer
UPDATE "users" SET "age" = 0
-- SQLite: ALTER TABLE "users" requires table recreation to set NOT NULL on "age"
