crates/vespertide-query/src/snapshots/vespertide_query__sql__tests__build_migration_action@build_migration_action_add_constraint_primary_key_postgres.snap
---
source: crates/vespertide-query/src/sql.rs
expression: "result.iter().map(|q| q.build(backend)).collect::<Vec<String>>().join(\"\\n\")"
---
ALTER TABLE "users" ADD PRIMARY KEY ("id")
